<resources>
    <string name="app_name">CakeWorld</string>
    <string name="user_email">User Email:</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="e_mail">E-mail :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="google_sign_in">Google Sign In</string>
    <!--FaceBook-->
    <string name="facebook_app_id">617191892265689</string>
    <string name="fb_login_protocol_scheme">fb617191892265689</string>
    <string name="logout">LogOut</string>
    <string name="cake_photo">cake photo</string>

</resources>
