<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginSignup.SignupActivity"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/confirm_password"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_confirm_pass"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Button
        android:id="@+id/user_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

</LinearLayout>